Fixed filters being  partially hidden on smaller screens

--- a/ituran-dataran/src/components/MainPage/pages/dashboards/style.css
+++ b/ituran-dataran/src/components/MainPage/pages/dashboards/style.css
@@ -7,8 +7,8 @@
 .iframe-content {
     position: fixed;
     height: 100vh;
-    width: 98%;
+    width: 97%;
     border: 0px;
-    margin-left: 2.5%;
+    margin-left: 3%;
     margin-right: 1%;
 }
